# Co-work

./: .clang-format  .gitignore  CMakeLists.txt  README.md  one_consumer.sh  one_producer_multiple_consumers_stress.sh
.github/workflows/: github-actions-dev.yml
DB_test/: a.cpp  commands.sql  db_create.sql  db_script.sh  krest1na_db_script.sh  krest1na_install_db_script.sh  script_install_db.sh
demo-server/: client.cpp  client_accept.cpp  server.cpp
include/: structures.h
scripts/: formatting.sh  setup-precommit-hook.sh  update_db.sh  update_db.sql  update_db_ubuntu.sh
src/client/: test.cpp  test_client.cpp
src/data_base/: db_connection.cpp  db_connection.h  db_orm.cpp  orm.h  serialization_orm.h  test_db.cpp  usage_orm.cpp
src/data_base/sha/: sha256.cpp  sha256.h
src/doctest/: doctest.cpp  doctest.h
src/qt-client/: .gitignore  CMakeLists.txt  actionlist.cpp  actionlist.h  kanban.cpp  kanban.h  kanban.ui  login.cpp  login.h  login.ui  main.cpp  task.h  taskaction.cpp  taskaction.h  taskdelegate.cpp  taskdelegate.h  taskeditor.cpp  taskeditor.h  tasklist.h  todolist.cpp  todolist.h  todolist.ui  untitled.pro
src/qt-client/Co-Work_autogen/: moc_predefs.h  mocs_compilation.cpp
src/qt-client/Co-Work_autogen/EWIEGA46WW/: moc_kanban.cpp  moc_login.cpp  moc_taskdelegate.cpp  moc_taskeditor.cpp  moc_tasklist.cpp
src/qt-client/Co-Work_autogen/include/: ui_kanban.h  ui_login.h
src/server/: README.md  app_db_connection.cpp  app_db_connection.h  application_context.cpp  application_context.h  auth_service.cpp  auth_service.h  broadcast_server.cpp  controller.cpp  controller.h  db.h  handler.h  handler_registration.cpp  handler_registration.h  main_server.cpp  project_handler.cpp  project_service.cpp  project_service.h  server.cpp  server.hpp  task_handler.cpp  task_service.cpp  task_service.h  tcp_connection.cpp  tcp_connection.h
src/server/app_db/: app_db_connection.cpp  app_db_connection.hpp
src/server/core/: application_context.cpp  application_context.h  application_context.hpp  controller.cpp  controller.hpp  handler.h  handler.hpp  handler_registration.cpp  handler_registration.h  handler_registration.hpp  multicast.cpp  multicast.h
src/server/endpoint_handlers/: comment_handler.cpp  project_handler.cpp  task_handler.cpp  task_history_handler.cpp
src/server/services/: auth_service.cpp  auth_service.hpp  comment_service.cpp  comment_service.h  project_service.cpp  task_history_service.cpp  task_history_service.h  task_service.cpp  task_service.hpp
src/server/tcp/: server.cpp  server.hpp  tcp_connection.cpp  tcp_connection.h  tcp_connection.hpp
src/server/util/: util.cpp  util.h
src/shared/: auth_request.h  auth_response.h  db_connection.h  defaults.cpp  defaults.h  globals.cpp  globals.h  request.h  request_format.h  response.h  response_format.h  serialization.h  structures.h  user.h
